# dtchat-egui

./: .gitignore  Cargo.toml  README.md
db/: conf.yaml  default.yaml  ion.cp
src/: app.rs  header_view.rs  main.rs  main_view.rs  network_view.rs
src/config/: app.rs  mod.rs  prediction.rs
src/domain/: peer.rs
src/messages/: graph_helper_view.rs  graph_view.rs  list_view.rs  mod.rs  prompt_view.rs  settings_view.rs  side_view.rs
src/ui/: main.rs  mod.rs
src/ui/components/: header.rs  message_forge.rs  message_settings_bar.rs  mod.rs
src/ui/views/: graph.rs  list.rs  mod.rs  settings.rs
src/utils/: clock.rs  color.rs  font.rs  logging.rs  mod.rs  text.rs  time.rs  uuid.rs  yaml.rs
