[package]
name = "dtchat-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.31.0"
eframe = "0.31.0"
serde = { version = "1.0.217", features = ["derive"] }
dtchat-backend = { git = "https://github.com/DTN-MTP/dtchat-backend", branch = "main"}
async-trait = "0.1"
once_cell = "1.17"
egui_plot = "0.31.0" # need to leave it at 0.31.0 for now
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.41"
serde_yaml = "0.9.33"
egui-file-dialog = "0.10.0"

[features]
default = []
dev = []
with_delay = ["dtchat-backend/with_delay"]
